fix: Can not trigger reg function in page Reg.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,3 +3,7 @@
 $color-black: #1F2D3D;
 $color-gray-light: #E5E9F2;
 
+body {
+  color: $color-black;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, sans-serif;
+}
